updated ARB to use @@locale key

--- a/l10n/intl_messages.arb
+++ b/l10n/intl_messages.arb
@@ -1,5 +1,6 @@
 {
-  "@@last_modified": "2020-02-18T18:40:58.801316",
+  "@@locale": "en",
+  "@@last_modified": "2020-02-19T22:48:33.395604",
   "alertInfo": "{type} ({faction}) | Level: {min} - {max}",
   "@alertInfo": {
     "description": "The information of the given alert, such as mission type, faction and enemy level",
