--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -192,13 +192,13 @@
       "type": "text",
       "placeholders": {}
     },
-    "formorianTitle": "Formorian",
+    "formorianTitle": "Fomorian",
     "@formorianTitle": {
-      "description": "Formorian progress title",
+      "description": "Fomorian progress title",
       "type": "text",
       "placeholders": {}
     },
-    "razorbackTitle": "Razerback",
+    "razorbackTitle": "Razorback",
     "@razorbackTitle": {
       "description": "Razorback progress title",
       "type": "text",
