--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,12 +1,10 @@
 {
   "@@last_modified": "2020-03-03T16:56:42.387837",
-  "alertInfo": "{type} ({faction}) | Level: {min} - {max}",
-  "@alertInfo": {
-    "description": "The information of the given alert, such as mission type, faction and enemy level",
+  "levelInfo": "Level: {min} - {max}",
+  "@levelInfo": {
+    "description": "The information of the current enemy levels",
     "type": "text",
     "placeholders": {
-      "type": {},
-      "faction": {},
       "min": {},
       "max": {}
     }
@@ -351,6 +349,176 @@
   "sentientOutpostNotificationDescription": "Notifications for new sentient threats",
   "@sentientOutpostNotificationDescription": {
     "description": "Notification description for sentient outpost option",
+    "type": "text",
+    "placeholder": {}
+  },
+  "warframeNewsNotificationTitle": "News",
+  "@warframeNewsNotificationTitle": {
+    "description": "Main Title for Warframe news notifications",
+    "type": "text",
+    "placeholder": {}
+  },
+  "warframeNewsNotificationDescription": "News notifications for Prime Access, Streams and Updates.",
+  "@warframeNewsNotificationDescription": {
+    "description": "Main description for Warframe news notifications",
+    "type": "text",
+    "placeholder": {}
+  },
+  "planetCyclesNotificationTitle": "Open World Cycles",
+  "@planetCycleNotificationTitle": {
+    "description": "Main title for open world notifications",
+    "type": "text",
+    "placeholder": {}
+  },
+  "planetCyclesNotificationDescription": "Open world notifications for their given cycles.",
+  "@planetCycleNotificationDescription": {
+    "description": "Main description for open world notifications",
+    "type": "text",
+    "placeholder": {}
+  },
+  "resourcesNotificationTitle": "Resources",
+  "@resourcesNotificationTitle": {
+    "description": "Main title for resource notifications",
+    "type": "text",
+    "placeholder": {}
+  },
+  "resourcesNotificationDescription": "Resources mostly found in invasions.",
+  "@resourcesNotificationDescription": {
+    "description": "Main description for resource notifications",
+    "type": "text",
+    "placeholder": {}
+  },
+  "fissuresNotificationTitle": "Fissure Missions",
+  "@fissuresNotificationTitle": {
+    "description": "Main title for fisssures notifications",
+    "type": "text",
+    "placeholder": {}
+  },
+  "fissuresNotificationDescription": "Filter fissure notifications by prefered mission type",
+  "@fissuresNotificationDescription": {
+    "description": "Main description for fissures notifications",
+    "type": "text",
+    "placeholder": {}
+  },
+  "acolytesNotificationTitle": "Acolytes",
+  "@acolytesNotificationTitle": {
+    "description": "Main title for acolyte notifications",
+    "type": "text",
+    "placeholder": {}
+  },
+  "acolytesNotificationDescription": "Notifies when an acolyte is found",
+  "@acolytesNotificationDescription": {
+    "description": "Main description for acolyte notifications",
+    "type": "text",
+    "placeholder": {}
+  },
+  "earthDayOption": "Earth Day",
+  "@earthDayOption": {
+    "description": "Earth cycle option",
+    "type": "text",
+    "placeholder": {}
+  },
+  "earthNightOption": "Earth Night",
+  "@earthNightOption": {
+    "description": "Earth cycle option",
+    "type": "text",
+    "placeholder": {}
+  },
+  "cetusDayOption": "Cetus Day",
+  "@cetusDayOption": {
+    "description": "Cetus cycle option",
+    "type": "text",
+    "placeholder": {}
+  },
+  "cetusNightOption": "Cetus Day",
+  "@cetusNightOption": {
+    "description": "Cetus cycle option",
+    "type": "text",
+    "placeholder": {}
+  },
+  "vallisWarmOption": "Orb Vallis Warm",
+  "@vallisWarmOption": {
+    "description": "Orb vallis cycle option",
+    "type": "text",
+    "placeholder": {}
+  },
+  "vallisColdOption": "Orb Vallis Cold",
+  "@vallisColdOption": {
+    "description": "Orb vallis cycle option",
+    "type": "text",
+    "placeholder": {}
+  },
+  "primeAccessNewsOption": "Prime Access",
+  "@primeAccessNewsOption": {
+    "description": "Warframe news option",
+    "type": "text",
+    "placeholder": {}
+  },
+  "streamNewsOption": "Stream Announcements",
+  "@streamNewsOption": {
+    "description": "Warframe news option",
+    "type": "text",
+    "placeholder": {}
+  },
+  "updateNewsOption": "Warframe Update News",
+  "@updateNewsOption": {
+    "description": "Warframe news option",
+    "type": "text",
+    "placeholder": {}
+  },
+  "updateDropTableTitle": "Update Drop Table",
+  "@updateDropTableTitle": {
+    "description": "Title for updaing drop tables",
+    "type": "text",
+    "placeholder": {}
+  },
+  "updateDropTableDescription": "Last updated {date}",
+  "@updateDropTableDescription": {
+    "description": "Description for updating drop table with date of the last update",
+    "type": "text",
+    "placeholder": {
+      "date": {}
+    }
+  },
+  "reportBugsTitle": "Report Bugs",
+  "@reportBugsTitle": {
+    "desciption": "Title for bug report link",
+    "type": "text",
+    "placeholder": {}
+  },
+  "reportBugsDescription": "Report bugs or Request a feature",
+  "@reportBugsDescription": {
+    "description": "Description for bug report link",
+    "type": "text",
+    "placeholder": {}
+  },
+  "aboutCategoryTitle": "About",
+  "@aboutCategoryTitle": {
+    "description": "Title for the about category of the settings page",
+    "type": "text",
+    "placeholder": {}
+  },
+  "dailyRewardTitle": "Daily Reward Reset Timer",
+  "@dailyRewardTitle": {
+    "description": "Title for daily reward timer",
+    "type": "text",
+    "placeholder": {}
+  },
+  "eliteBadgeTitle": "Elite",
+  "@eliteBadgeTitle": {
+    "description": "Nightwave Elite badge title",
+    "type": "text",
+    "placeholder": {}
+  },
+  "dailyNightwaveTitle": "Daily",
+  "@dailyNightwaveTitle": {
+    "description": "Nightwave daily title",
+    "type": "text",
+    "placeholder": {}
+  },
+  "weeklyNightwaveTitle": "Weekly",
+  "@weeklyNightwaveTitle": {
+    "description": "Nightwave weekly title",
     "type": "text",
     "placeholder": {}
   }
