Fix(lang): removed double 'cetus day'

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -432,7 +432,7 @@
     "type": "text",
     "placeholder": {}
   },
-  "cetusNightOption": "Cetus Day",
+  "cetusNightOption": "Cetus Night",
   "@cetusNightOption": {
     "description": "Cetus cycle option",
     "type": "text",
