--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -563,5 +563,29 @@
     "description": "Settings title",
     "type": "text",
     "placeholder": {}
+  },
+  "dailyRewardTitle": "Daily Reward Reset Timer",
+  "@dailyRewardTitle": {
+    "description": "Title for daily reward timer",
+    "type": "text",
+    "placeholder": {}
+  },
+  "eliteBadgeTitle": "Elite",
+  "@eliteBadgeTitle": {
+    "description": "Nightwave Elite badge title",
+    "type": "text",
+    "placeholder": {}
+  },
+  "dailyNightwaveTitle": "Daily",
+  "@dailyNightwaveTitle": {
+    "description": "Nightwave daily title",
+    "type": "text",
+    "placeholder": {}
+  },
+  "weeklyNightwaveTitle": "Weekly",
+  "@weeklyNightwaveTitle": {
+    "description": "Nightwave weekly title",
+    "type": "text",
+    "placeholder": {}
   }
 }
