--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -80,6 +80,12 @@
     "type": "text",
     "placeholders": {}
   },
+  "seeWikia": "See details",
+  "@seeWikia": {
+    "description": "General button to wikia of given item",
+    "type": "text",
+    "placeholders": {}
+  },
   "eventDescription": "Description",
   "@eventDescription": {
     "description": "Event description category title",
@@ -358,6 +364,12 @@
     "type": "text",
     "placeholder": {}
   },
+  "warframeNewsTitle": "Warframe News",
+  "@warframeNewsTitle": {
+    "description": "Main Title for Warframe news page",
+    "type": "text",
+    "placeholder": {}
+  },
   "warframeNewsNotificationTitle": "News",
   "@warframeNewsNotificationTitle": {
     "description": "Main Title for Warframe news notifications",
@@ -576,21 +588,279 @@
     "type": "text",
     "placeholder": {}
   },
-  "seeWikiaTitle": "See Wikia",
-  "@seeWikiaTitle": {
-    "description": "See wikia button title",
+  "plainsofEidolonMapTitle": "Plains of Eidolon map",
+  "@plainsofEidolonMapTitle": {
+    "description": "Plains of Eidolon Map link title",
+    "type": "text",
+    "placholder": {}
+  },
+  "orbVallisMapTitle": "Orb Vallis map",
+  "@orbVallisMapTitle": {
+    "description": "Orb Vallis Map link title",
+    "type": "text",
+    "placholder": {}
+  },
+  "plainsofEidolonFishingDataTitle": "PoE: Fishing Data",
+  "@plainsofEidolonFishingDataTitle": {
+    "description": "Plains of Eidolon fishing data link title",
+    "type": "text",
+    "placholder": {}
+  },
+  "orbVallisFishingDataTitle": "PoE: Fishing Data",
+  "@orbVallisFishingDataTitle": {
+    "description": "Orb Vallis fishing data link title",
+    "type": "text",
+    "placholder": {}
+  },
+  "howToFishTitle": "How to fish",
+  "@howToFishTitle": {
+    "description": "How to fish link title",
+    "type": "text",
+    "placholder": {}
+  },
+  "recentNewsCategoryTitle": "Most Recent News",
+  "@recentNewsCategoryTitle": {
+    "description": "Title for recent news title",
     "type": "text",
     "placeholder": {}
   },
-  "seeDetailsTitle": "See details",
-  "@seeDetailsTitle": {
-    "description": "See details button title",
+  "pastNewsCategoryTitle": "Past News",
+  "@pastNewsCategoryTitle": {
+    "description": "Title for past Warframe news",
     "type": "text",
     "placeholder": {}
   },
-  "voidTraderTitle": "See Wikia",
-  "@voidTraderTitle": {
-    "description": "See wikia button title",
+  "warframePassiveTitle": "Passive",
+  "@warframePassiveTitle": {
+    "description": "Warframes passive title",
+    "type": "text",
+    "placeholder": {}
+  },
+  "auraTitle": "Aura Polarity",
+  "@auraTitle": {
+    "description": "Aura polarity title for items",
+    "type": "text",
+    "placeholder": {}
+  },
+  "preinstalledPolarities": "Preinstalled Polarities",
+  "@preinstalledPolarities": {
+    "description": "Preinstalled polarites title for items",
+    "type": "text",
+    "placeholder": {}
+  },
+  "shieldTitle": "shield",
+  "@shieldTitle": {
+    "description": "Title for shield value",
+    "typ": "text",
+    "placeholder": {}
+  },
+  "armorTitle": "shield",
+  "@armorTitle": {
+    "description": "Title for armor value",
+    "typ": "text",
+    "placeholder": {}
+  },
+  "healthTitle": "shield",
+  "@healthTitle": {
+    "description": "Title for health value",
+    "typ": "text",
+    "placeholder": {}
+  },
+  "powerTitle": "shield",
+  "@powerTitle": {
+    "description": "Title for power value",
+    "typ": "text",
+    "placeholder": {}
+  },
+  "sprintSpeedTitle": "shield",
+  "@sprintSpeedTitle": {
+    "description": "Title for sprint speed value",
+    "typ": "text",
+    "placeholder": {}
+  },
+  "abilitiesTitle": "Abilites",
+  "@abilitiesTitle": {
+    "description": "Title for warframe, archwings, and Necromech abilites",
+    "typ": "text",
+    "placeholder": {}
+  },
+  "componentsTitle": "Components",
+  "@componentsTitle": {
+    "description": "Title for item components",
+    "typ": "text",
+    "placeholder": {}
+  },
+  "fullPatchNotesTitle": "FULL PATCH NOTES",
+  "@fullPatchNotesTitle": {
+    "description": "Full Patch Notes Title",
+    "typ": "text",
+    "placeholder": {}
+  },
+  "masteryRequirementTitle": "Mastery Requirement",
+  "@masteryRequirementTitle": {
+    "description": "Mastery requirement for item",
+    "type": "text",
+    "placeholder": {}
+  },
+  "weaponTypeTitle": "Weapon Type",
+  "@weaponTypeTitle": {
+    "description": "Weapon item type",
+    "type": "text",
+    "placeholder": {}
+  },
+  "accuracyTitle": "Accuracy",
+  "@accuracyTitle": {
+    "description": "Weapon accuracy title",
+    "type": "text",
+    "placeholder": {}
+  },
+  "cricticalChanceTitle": "Critical Chance",
+  "@cricticalChanceTitle": {
+    "description": "Weapon crictical chance",
+    "type": "text",
+    "placeholder": {}
+  },
+  "cricticalMultiplierTitle": "Critcial Multiplier",
+  "@cricticalMultiplierTitle": {
+    "description": "Weapon critical multiplier",
+    "type": "text",
+    "placeholder": {}
+  },
+  "fireRateTitle": "Fire Rate",
+  "@fireRateTitle": {
+    "description": "Weapon fire rate",
+    "type": "text",
+    "placeholder": {}
+  },
+  "magazineTitle": "Magazine",
+  "@magazineTitle": {
+    "description": "Weapon magazine size title",
+    "type": "text",
+    "placeholder": {}
+  },
+  "multishotTitle": "Multishot",
+  "@multishotTitle": {
+    "description": "Weapon multishot",
+    "type": "text",
+    "placeholder": {}
+  },
+  "noiseTitle": "Noise",
+  "@noiseTitle": {
+    "description": "Weapon noise type",
+    "type": "text",
+    "placeholder": {}
+  },
+  "reloadTitle": "Reload",
+  "@reloadTitle": {
+    "description": "Weapon item type",
+    "type": "text",
+    "placeholder": {}
+  },
+  "rivenDispositionTitle": "Riven Disposition",
+  "@rivenDispositionTitle": {
+    "description": "Weapon's riven disposition",
+    "type": "text",
+    "placeholder": {}
+  },
+  "statusChanceTitle": "Status Chance",
+  "@statusChanceTitle": {
+    "description": "Weapon's status chance",
+    "type": "text",
+    "placeholder": {}
+  },
+  "triggerTitle": "Trigger",
+  "@triggerTitle": {
+    "description": "Weapon item type",
+    "type": "text",
+    "placeholder": {}
+  },
+  "damageTitle": "Damage",
+  "@damageTitle": {
+    "description": "Weapon's damage category",
+    "type": "text",
+    "placeholder": {}
+  },
+  "totalDamageTitle": "Total Damage",
+  "@totalDamageTitle": {
+    "description": "Weapon's total damage'",
+    "type": "text",
+    "placeholder": {}
+  },
+  "stancePolarityTitle": "Stance Polarity",
+  "@stancePolarityTitle": {
+    "description": "Melee stance polarity title",
+    "type": "text",
+    "placeholder": {}
+  },
+  "attackSpeedTitle": "Attack Speed",
+  "@attackSpeedTitle": {
+    "description": "melee attack speed",
+    "type": "text",
+    "placeholder": {}
+  },
+  "followThroughTitle": "Follow Through",
+  "@followThroughTitle": {
+    "description": "Melee follow through title",
+    "type": "text",
+    "placeholder": {}
+  },
+  "rangeTitle": "Range",
+  "@rangeTitle": {
+    "description": "Melee's range title",
+    "type": "text",
+    "placeholder": {}
+  },
+  "slamAttackTitle": "Slam Attack",
+  "@slamAttackTitle": {
+    "description": "Melee's slam attack",
+    "type": "text",
+    "placeholder": {}
+  },
+  "slamRadialDamageTitle": "Slam Radial Damage",
+  "@slamRadialDamageTitle": {
+    "description": "Melee's Slam Radial Damage",
+    "type": "text",
+    "placeholder": {}
+  },
+  "slamRadiusTitle": "Slam Radius",
+  "@slamRadiusTitle": {
+    "description": "Slam Radius title",
+    "type": "text",
+    "placeholder": {}
+  },
+  "slideAttackTitle": "Slide Attack",
+  "@slideAttackTitle": {
+    "description": "Melee's slide attack",
+    "type": "text",
+    "placeholder": {}
+  },
+  "heavyAttackTitle": "Heavy Attack",
+  "@heavyAttackTitle": {
+    "description": "Heavy attack title",
+    "type": "text",
+    "placeholder": {}
+  },
+  "heavySlamAttackTitle": "Heavy Slam Attack",
+  "@heavySlamAttackTitle": {
+    "description": "Heavy Slam attack title",
+    "type": "text",
+    "placeholder": {}
+  },
+  "heavySlamRadialDamageTitle": "Heavy Slam Radial Damage",
+  "@heavySlamRadialDamageTitle": {
+    "description": "Heavy Slam attack title",
+    "type": "text",
+    "placeholder": {}
+  },
+  "heavySlamRadiusTitle": "Heavy Slam Radius",
+  "@heavySlamRadiusTitle": {
+    "description": "Heavy Slam attack title",
+    "type": "text",
+    "placeholder": {}
+  },
+  "windUpTitle": "Wind Up",
+  "@windUpTitle": {
+    "description": "melee's heavy wind up time title",
     "type": "text",
     "placeholder": {}
   }
