chore(lang): fix typo in wikia

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -80,7 +80,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "seeWikia": "See details",
+  "seeWikia": "See Wikia",
   "@seeWikia": {
     "description": "General button to wikia of given item",
     "type": "text",
