chore(lang): add new string

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -875,5 +875,11 @@
     "description": "melee's heavy wind up time title",
     "type": "text",
     "placeholder": {}
+  },
+  "discordSupportTitle": "Support",
+  "@discordSupportTitle": {
+    "description": "Discord support title",
+    "type": "text",
+    "placeholder": {}
   }
 }
