feat: add a basic card for steel path

--- a/lib/l10n/arb/intl_en.arb
+++ b/lib/l10n/arb/intl_en.arb
@@ -881,5 +881,11 @@
     "description": "Discord support title",
     "type": "text",
     "placeholder": {}
+  },
+  "steelPathTitle": "Steel Path",
+  "@steelPathTitle": {
+    "description": "Steel path card title",
+    "type": "text",
+    "placeholer": {}
   }
 }
