--- a/lib/l10n/arb/intl_en.arb
+++ b/lib/l10n/arb/intl_en.arb
@@ -140,21 +140,9 @@
     "type": "text",
     "placeholders": {}
   },
-  "baroTitle": "Void trader",
+  "baroTitle": "Baro Ki'Teer",
   "@baroTitle": {
     "description": "Title for Baro Ki'Teer card",
-    "type": "text",
-    "placeholders": {}
-  },
-  "baroLeaving": "Baro Ki'Teer leaves in",
-  "@baroLeaving": {
-    "description": "displays remaining time before Baro Ki'Teer leaves",
-    "type": "text",
-    "placeholders": {}
-  },
-  "baroArriving": "Baro Ki'Teer arrives in",
-  "@baroArriving": {
-    "description": "displays remaining time before Baro Ki'Teer arrives",
     "type": "text",
     "placeholders": {}
   },
@@ -284,18 +272,6 @@
   "@themeDescription": {
     "description": "Theme option description",
     "typ": "text",
-    "placeholders": {}
-  },
-  "backOpensDrawerTitle": "Back button opens drawer",
-  "@backOpensDrawerTitle": {
-    "description": "Title for the option that allows back button to open the drawer",
-    "type": "text",
-    "placeholders": {}
-  },
-  "backOpensDrawerDescription": "Pressing the back button opens the drawer.",
-  "@backOpensDrawerDescription": {
-    "description": "Description for back button opens drawer option",
-    "type": "text",
     "placeholders": {}
   },
   "notificationsTitle": "Notifications",
