chore: repace explore with synthtarget
This is just a QoL on the UI so no need to add new features just yet

--- a/lib/l10n/arb/intl_en.arb
+++ b/lib/l10n/arb/intl_en.arb
@@ -931,5 +931,11 @@
     "description": "Title for invasion constrcution progress",
     "type": "text",
     "placeholder": {}
+  },
+  "synthTargetTitle": "SynthTargets",
+  "@synthTargetTitle": {
+    "description": "Title for synthtargets",
+    "type": "text",
+    "placeholder": {}
   }
 }
