fix: zariman name not following the ${name} cycle scheme

--- a/lib/l10n/arb/intl_en.arb
+++ b/lib/l10n/arb/intl_en.arb
@@ -220,6 +220,12 @@
     "type": "text",
     "placeholders": {}
   },
+  "zarimanCycleTitle": "Zariman Cycle",
+  "@zarimanCycleTitle": {
+    "description": "Zariman Cycle title",
+    "type": "text",
+    "placeholder": {}
+  },
   "timersTitle": "Timers",
   "@timersTitle": {
     "description": "Times title",
